refactor: add safe staff user lookups